--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1858,7 +1858,7 @@ arb:
       canal:
         # email: "E-mail"
         # fax: "Fax"
-        # mail: "Mail"
+        # mail: "Adresse postale"
         # mobile: "Téléphone portable"
         # phone: "Téléphone fixe"
         # website: "Site web"
