--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1310,7 +1310,7 @@ eng:
       canal:
         # email: "E-mail"
         # fax: "Fax"
-        # mail: "Mail"
+        # mail: "Adresse postale"
         # mobile: "Téléphone portable"
         # phone: "Téléphone fixe"
         # website: "Site web"
