--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -579,7 +579,8 @@ eng:
     account_tabbox:
       children: "Children Account"
       entities: "People"
-      journal_entry_lines: "Journal entry lines"
+      # journal_entry_items: "Écritures"
+      journal_entry_lines: "Journal entry lines" #?
     # account_tangible_fixed_assets: "Immobilisations corporelles"
     # account_untangible_fixed_assets: "Immobilisations incorporelles"
     # account_update: "Modifier le compte"
@@ -892,7 +893,8 @@ eng:
     journal_update: "Update journal"
     journal_view:
       entries: "Entries"
-      lines: "Lines of entries"
+      # items: "Lignes d’écritures"
+      lines: "Lines of entries" #?
       mixed: "Entries and lines"
     journals: "Journals"
     land_parcel_name: "Land parcel name"
@@ -1071,7 +1073,8 @@ eng:
     number_options: "Options Numbers"
     on_account: "On account"
     one_condition: "One condition"
-    operation_lines: "Incoming and outgoing products"
+    # operation_items: "Intrants et sortants"
+    operation_lines: "Incoming and outgoing products" #?
     # operation_update: "Modifier le travail"
     # operation_use_create: "Ajouter un matériel"
     operations: "Operations"
@@ -1160,7 +1163,7 @@ eng:
       inactive: "Inactive"
     profitability: "Profitability"
     purchase: "Purchase"
-    # purchase_lines: "Lignes de l’achat"
+    # purchase_items: "Lignes de l’achat"
     purchase_steps:
       deliveries: "Incoming deliveries"
       products: "Purchase"
@@ -1217,13 +1220,13 @@ eng:
     # sale: "Vente"
     # sale_cancel: "Faire un avoir sur la facture"
     # sale_deliveries: "Livraisons"
-    # sale_line_create: "Ajouter un produit au devis (Mode complet)"
-    # sale_lines: "Lignes de la vente"
+    # sale_item_create: "Ajouter un produit au devis (Mode complet)"
+    # sale_items: "Lignes de la vente"
     # sale_update: "Modifier les informations du devis"
     # sales: "Ventes"
     sales_conditions: "Conditions of sales"
     sales_invoice: "Invoicing"
-    # sales_invoice_lines: "Lignes de la facture"
+    # sales_invoice_items: "Lignes de la facture"
     sales_invoice_number: "Sales invoice"
     # sales_invoice_print: "Imprimer la facture"
     # sales_invoice_sale: "Facturer la vente"
@@ -1492,17 +1495,22 @@ eng:
     bookkeeping_works_only_with: "The transfer to accountancy can be done only for: %{list}."
     cannot_delete_entity: "This person can't be deleted because there is some accounting history."
     cannot_find_document_template: "Cant find document template"
-    cannot_mark_entry_lines: "Can not mark these entry lines"
+    # cannot_mark_entry_items: "Impossible de lettrer ces lignes d’écritures ensemble"
+    cannot_mark_entry_lines: "Can not mark these entry lines" #?
     cannot_merge_an_entity_with_itself: "It's impossible to merge a person with itself"
     cannot_merge_entities: "It's impossible to merge these people."
     changes_have_been_reflected: "The changes have been reflected in the stocks state"
     changes_have_not_been_reflected: "The changes have not been reflected in the stocks state"
     closed_financial_years: "The financial year has been closed successfully"
     columns_are_already_uses: "One or many columns are selected many times"
-    draft_entry_lines_are_validated:
-      one: "One entry has been validated"
-      other: "%{count} entries have been validated"
-      zero: "No entries has been validated"
+    draft_entry_items_are_validated:
+      # one: "%{count} ligne de brouillard validée"
+      # other: "%{count} lignes de brouillard validées"
+      # zero: "Aucune ligne de brouillard validée"
+    draft_entry_lines_are_validated:  #?
+      one: "One entry has been validated" #?
+      other: "%{count} entries have been validated" #?
+      zero: "No entries has been validated" #?
     entity_columns_are_needed: "You need to specify at least one column for the person and in particular its family name."
     exception_raised: "An error occurred during the processing: %{message}"
     expired_session: "Session expired. Please reconnect."
@@ -1510,13 +1518,16 @@ eng:
     # import_succeeded: "Vos données ont été correctement importées"
     importation_cancelled: "Your data was not imported. Import has been canceled"
     importation_finished: "The import is complete."
-    impossible_to_add_lines: "You can add more products to your sale, the estimate is passed in order"
-    impossible_to_add_lines_to_purchase: "You can not add products to your purchase "
+    # impossible_to_add_items: "Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande"
+    # impossible_to_add_items_to_purchase: "Vous ne pouvez plus ajouter de produits à votre achat"
+    impossible_to_add_lines: "You can add more products to your sale, the estimate is passed in order" #?
+    impossible_to_add_lines_to_purchase: "You can not add products to your purchase " #?
     invalid_file_nature: "Invalid file type"
     journal_closed_on: "The journal “%{journal}” was closed on %{closed_on}."
     journal_entry_already_validated: "The record has already been validated and can not be changed"
     journal_entry_has_been_saved: "The record %{number} has been successfully saved"
-    journal_entry_lines_marked_with_letter: "Journal entry lines have been marked with letter %{letter}"
+    # journal_entry_items_marked_with_letter: "Les lignes d’écritures ont été lettrées avec la lettre %{letter}"
+    journal_entry_lines_marked_with_letter: "Journal entry lines have been marked with letter %{letter}" #?
     journal_reopened_on: "The journal “%{journal}” has been re-opened on %{closed_on}."
     mails_are_sent: "The emails were sent"
     need_balanced_journal_to_tax_declaration: "All your journals must be closed and balanced at that date."
@@ -1530,8 +1541,10 @@ eng:
     need_stocks_to_create_inventories: "You have to manage some stocks in order to manage inventories"
     need_stocks_warehouse_to_create_products: "You must create a warehouse to be able to create a product"
     need_to_create_subscription_nature: "You must create a type of subscription to manage your subscriptions"
-    need_warehouse_to_create_purchase_line: "You must create a warehouse to be able to create a purchase."
-    need_warehouse_to_create_sale_line: "You must create a warehouse to be able to create a sale"
+    # need_warehouse_to_create_purchase_item: "Vous devez créer un lieu de stockage pour pouvoir réaliser un achat"
+    need_warehouse_to_create_purchase_line: "You must create a warehouse to be able to create a purchase." #?
+    # need_warehouse_to_create_sale_item: "Vous devez créer un lieu de stockage pour pouvoir réaliser une vente"
+    need_warehouse_to_create_sale_line: "You must create a warehouse to be able to create a sale" #?
     need_warehouse_to_record_stock_moves: "You must create a warehouse to be able to manage stocks."
     new_actual_number: "The new number is being %{actual_number}"
     no_authenticated: "You could not be identified. The user_name or password must be incorrect."
@@ -1541,7 +1554,8 @@ eng:
     no_depositable_payments: "There are no payment to deposit"
     no_existing_mandates: "There are no mandates"
     # no_financial_year: "Aucun exercice enregistré"
-    no_lines_found: "No product has been added to the order"
+    # no_items_found: "Aucun pruduit n’a été ajouté à la commande "
+    no_lines_found: "No product has been added to the order" #?
     no_payment_to_deposit: "There are no payment to deposit"
     no_reopenable_journal: "You can not re-open this journal."
     no_stocks: "You have no stock. If you want to manage the stock of a product, please check the option “Manage stocks” in the characteristics of your product."
@@ -1561,7 +1575,8 @@ eng:
     sale_already_invoiced: "The sale has already been invoiced: you can not define delivery "
     sale_cannot_be_updated: "The estimate is no longer editable."
     sale_cant_be_deleted: "The sale can not be deleted."
-    select_entry_lines_to_mark_together: "Select entry lines to mark together"
+    # select_entry_items_to_mark_together: "Sélectionnez des lignes d’écritures à lettrer ensemble"
+    select_entry_lines_to_mark_together: "Select entry lines to mark together" #?
     specify_filter: "You must choose at least one search filter"
     specify_updates: "You must specify at least one field to edit"
     unavailable_model: "Inexistent %{model} (%{id})"
@@ -1570,10 +1585,14 @@ eng:
     unvalid_version_for_restore: "The version of the software used to perform the backup does not match the current version of the software"
     update_is_done: "The update has been made"
     validates_old_inventories: "It is advisable to clear or validate uncommitted inventories before making a new"
-    x_unpointed_journal_entry_lines:
-      one: "There is one entry to point"
-      other: "There are %{count} entries to point"
-      zero: "There are no entries to point at the moment"
+    x_unpointed_journal_entry_items:
+      # one: "Il y a une écriture à pointer"
+      # other: "Il y a %{count} écritures à pointer"
+      # zero: "Il n’y a pas d’écritures à pointer pour l’instant"
+    x_unpointed_journal_entry_lines:  #?
+      one: "There is one entry to point" #?
+      other: "There are %{count} entries to point" #?
+      zero: "There are no entries to point at the moment" #?
     you_must_have_an_email_column: "You must have an email address in your extraction"
     you_must_select_a_file_to_import: "You must select a file to import"
     you_will_lose_all_your_current_data: "If you continue, you will lose all your data being entered. Would you continue?"
