--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -314,13 +314,7 @@ spa:
       # new: "Nouvelle préférence"
       # show: "Préférence"
     backend/prescriptions: #?
-    backend/prices:
-      # edit: "Modifie le prix %{pretax_amount}/%{amount} sur %{product}"
-      # export: "Exporter les prix"
-      # find: "Trouver un prix"
-      # import: "Importer un fichier CSV de tarifs"
-      # index: "Prix"
-      # new: "Ajout d’un nouveau prix"
+    backend/prices: #?
     backend/product_categories: #?
     backend/product_components: #?
     backend/product_event_natures: #?
@@ -345,6 +339,7 @@ spa:
       # new: "Ajout d’une nouvelle catégorie de produits"
       # show: "Détail de la catégorie\_: %{name}"
     backend/product_nature_components: #?
+    backend/product_nature_prices: #?
     backend/product_natures:
       # edit: "Modifier le type de produit\_: %{name}"
       # index: "Type de produit"
@@ -581,7 +576,6 @@ spa:
     # backend/outgoing_payment_modes: "Modes de décaissement"
     # backend/outgoing_payments: "Décaissements"
     # backend/preferences: "Préférences"
-    # backend/prices: "Prix"
     # backend/product_groups: "Lot de produits"
     # backend/product_moves: "Mouvements de stock"
     # backend/product_nature_categories: "Catégories de produits"
@@ -679,7 +673,7 @@ spa:
     # add_payment: "Ajouter un encaissement"
     # add_phone: "Ajouter un n° de téléphone"
     # add_posology: "Ajouter une posologie"
-    # add_quickly_a_line: "Ajouter rapidement une ligne de produit"
+    # add_quickly_an_item: "Ajouter rapidement une ligne de produit"
     # add_subscription_for_sale_line: "Ajouter un abonnement pour la ligne N°%{position}"
     # add_treatment: "Ajouter un traitement"
     # add_website: "Ajouter un site Web"
@@ -1740,17 +1734,34 @@ spa:
     # use_entity_codes_for_account_numbers: "Utiliser le code personne pour composer les numéros de compte"
     # various_journal: "Journal des opérations diverses par défaut"
   unroll:
-    animal_events:
-      # all: "{name} - {started_at}"
-    animal_prescriptions:
-      # all: "N° {prescription_number} du {prescripted_on}"
-    animals:
+    animal_events: #?
+    animal_prescriptions: #?
+    animals: #?
+    backend/animals:
       # all: "{name} - {number}"
-    logs:
+    backend/entity_links:
+      # all: "{started_at}"
+    backend/events:
+      # all: "{reason}"
+    backend/logs:
       # all: "{observed_at}"
-    product_events:
-      # all: "{observed_at}"
-    products:
-      # all: "{number} {name} "
-    units:
+    backend/observations:
+      # all: "{content}"
+    backend/operations:
+      # all: "{nature} ({created_at})"
+    backend/product_memberships:
+      # all: "{started_at}"
+    backend/product_nature_prices:
+      # all: "{amount} {currency} / {pretax_amount} {currency}"
+    backend/product_transfers:
+      # all: "{id}"
+    backend/products:
+      # all: "{number} {name}"
+    backend/units:
       # all: "{label} ({name})"
+    backend/users:
+      # all: "{first_name} {last_name}"
+    logs: #?
+    product_events: #?
+    products: #?
+    units: #?
