--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -271,13 +271,13 @@ eng:
       # index: "Préfénces"
       # new: "Nouvelle préférence"
       # show: "Préférence"
-    backend/prices:
-      edit: "Edit price %{pretax_amount}/%{amount} of %{product}"
-      export: "Export prices"
-      find: "Find price"
-      import: "Import prices"
-      index: "Prices"
-      new: "Add a new price"
+    backend/prices:  #?
+      edit: "Edit price %{pretax_amount}/%{amount} of %{product}" #?
+      export: "Export prices" #?
+      find: "Find price" #?
+      import: "Import prices" #?
+      index: "Prices" #?
+      new: "Add a new price" #?
     backend/product_groups:
       # edit: "Modifier le lot\_: %{name} "
       # index: "Lots de produits"
@@ -295,6 +295,7 @@ eng:
       index: "Product categories"
       new: "Add a new product category"
       show: "Product category: %{name}"
+    backend/product_nature_prices: #?
     backend/product_natures:
       edit: "Edit the product type: %{name}"
       index: "Product types"
@@ -511,7 +512,7 @@ eng:
     backend/outgoing_payment_modes: "Disbursement modes"
     backend/outgoing_payments: "Disbursements"
     backend/preferences: "Preferences"
-    backend/prices: "Prices"
+    backend/prices: "Prices" #?
     backend/product_groups: "Product groups"
     backend/product_moves: "Stock moves"
     backend/product_nature_categories: "Product categories"
@@ -608,7 +609,8 @@ eng:
     add_payment: "Add payment"
     add_phone: "Add phone number"
     # add_posology: "Ajouter une posologie"
-    add_quickly_a_line: "Add quickly a line of product"
+    add_quickly_a_line: "Add quickly a line of product" #?
+    # add_quickly_an_item: "Ajouter rapidement une ligne de produit"
     add_subscription_for_sale_line: "Add subscription for sale line #%{position}"
     add_treatment: "Add treatment"
     add_website: "Add website"
@@ -1639,17 +1641,38 @@ eng:
     use_entity_codes_for_account_numbers: "Use code for creating account numbers"
     various_journal: "Default various operations journal"
   unroll:
-    animal_events:
-      # all: "{name} - {started_at}"
-    animal_prescriptions:
-      all: "#{prescription_number} on {prescripted_on}"
-    animals:
-      all: "{name} ({sex})"
-    logs:
+    animal_events: #?
+    animal_prescriptions:  #?
+      all: "#{prescription_number} on {prescripted_on}" #?
+    animals:  #?
+      all: "{name} ({sex})" #?
+    backend/animals:
+      # all: "{name} - {number}"
+    backend/entity_links:
+      # all: "{started_at}"
+    backend/events:
+      # all: "{reason}"
+    backend/logs:
       # all: "{observed_at}"
-    product_events:
-      # all: "{observed_at}"
-    products:
-      all: "{name} ({sex})"
-    units:
-      all: "{label} ({name})"
+    backend/observations:
+      # all: "{content}"
+    backend/operations:
+      # all: "{nature} ({created_at})"
+    backend/product_memberships:
+      # all: "{started_at}"
+    backend/product_nature_prices:
+      # all: "{amount} {currency} / {pretax_amount} {currency}"
+    backend/product_transfers:
+      # all: "{id}"
+    backend/products:
+      # all: "{number} {name}"
+    backend/units:
+      # all: "{label} ({name})"
+    backend/users:
+      # all: "{first_name} {last_name}"
+    logs: #?
+    product_events: #?
+    products:  #?
+      all: "{name} ({sex})" #?
+    units:  #?
+      all: "{label} ({name})" #?
