--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -89,7 +89,7 @@ spa:
         # depreciable: "Ammortissable"
         # duration: "Nombre de numéros OU période d’abonnement"
         # price: "Prix de revient"
-        # producible: "Productible"
+        # producible: "Produisible"
         # product_account: "Compte de vente"
         # purchasable: "Achetable"
         # saleable: "Vendable"
@@ -98,6 +98,9 @@ spa:
       product_nature_category:
         # children: "Sous-catégories"
         # published: "Publiée"
+      product_nature_price:
+        # category: "Catégorie de fiche associée"
+        # entity: "Fournisseur"
       product_specy:
         # code: "Code race"
       product_stock:
@@ -274,6 +277,9 @@ spa:
         price:
           # already_defined: "Un prix a déjà été défini pour cette liste de prix et ce produit"
           # range_overlap: "L’intervalle de quantité en chevauche un autre (de %{min} à %{max})"
+        product_nature_price:
+          # already_defined: "Un prix a déjà été défini pour cette liste de prix et ce produit"
+          # range_overlap: "L’intervalle de quantité en chevauche un autre (de %{min} à %{max})"
         product_stock:
           # product_cannot_be_in_warehouse: "Le produit ne peut pas être stocké dans le réservoir %{warehouse}"
         product_transfer:
@@ -398,6 +404,7 @@ spa:
       # product_nature: "Produit"
       # product_nature_category: "Catégorie de produit"
       # product_nature_component: "Composant de produit"
+      # product_nature_price: "Prix"
       # product_specy: "Race"
       # product_stock: "Stock de produit"
       # product_stock_move: "Mouvement de stock"
@@ -1631,6 +1638,10 @@ spa:
         # sales: "Vente"
     product_nature_component:
       # of_product: "du produit"
+    product_nature_price:
+      # label: "%{product} / %{amount} %{currency}"
+      # no_range: "Pas d’intervalle"
+      # range: "De %{min} à %{max}"
     product_stock:
       # default_name: "%{warehouse}/%{product}/%{tracking}"
       label:
