--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1933,6 +1933,8 @@ arb:
       # all: "{content}"
     backend/operations:
       # all: "{nature} ({created_at})"
+    backend/product_indicators:
+      # all: "{id}"
     backend/product_memberships:
       # all: "{started_at}"
     backend/product_nature_prices:
