--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1658,6 +1658,8 @@ eng:
       # all: "{content}"
     backend/operations:
       # all: "{nature} ({created_at})"
+    backend/product_indicators:
+      # all: "{id}"
     backend/product_memberships:
       # all: "{started_at}"
     backend/product_nature_prices:
