--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -1749,6 +1749,8 @@ spa:
       # all: "{content}"
     backend/operations:
       # all: "{nature} ({created_at})"
+    backend/product_indicators:
+      # all: "{id}"
     backend/product_memberships:
       # all: "{started_at}"
     backend/product_nature_prices:
