--- a/config/locales/fra/help/product_nature_prices-index.txt
+++ b/config/locales/fra/help/product_nature_prices-index.txt
@@ -11,7 +11,7 @@ Vous avez la possibilité de rechercher uniquement les prix de vente ou les prix
 
 L'import et l'export de tarifs vous permettent de gérer vos grilles de tarifs au format CSV et donc depuis des tableurs.
 
-  * [[>prices/export|Exporter]] vos tarifs au format csv va générer un fichier csv récapitulant tous vos tarifs (HT, taxe, catégorie, ...).
-  * [[>prices/import|Importer]] un fichier csv de tarifs vous permet de refléter sous Ekylibre les changements et ajouts faits à vos tarifs depuis votre fichier csv.
+  * [[|Exporter]] vos tarifs au format csv va générer un fichier csv récapitulant tous vos tarifs (HT, taxe, catégorie, ...).
+  * [[|Importer]] un fichier csv de tarifs vous permet de refléter sous Ekylibre les changements et ajouts faits à vos tarifs depuis votre fichier csv.
 
 
